# zebrarag

./: .gitignore  CNAME  Cargo.toml  README.md  models.toml
.github/workflows/: deploy-site.yml
benches/: Cargo.toml  embed_inference_prof.rs  embed_pool_bench.rs  index_prof.rs  score_bench.rs
crates/apps/zebra-dsl/: Cargo.toml
crates/apps/zebra-embed/: Cargo.toml
crates/apps/zebra-mcp/: Cargo.toml
crates/apps/zebraindex/: Cargo.toml
crates/apps/zebrarag/: Cargo.toml
crates/zrag-ann/: Cargo.toml
crates/zrag-ann/src/: cache.rs  lib.rs  method.rs  selector.rs  usearch_graph.rs
crates/zrag-common/: Cargo.toml
crates/zrag-common/src/: chunk_strategy.rs  dsl.rs  file_type.rs  format.rs  ids.rs  lib.rs  paths.rs  secrets.rs
crates/zrag-daemon/: Cargo.toml
crates/zrag-daemon/src/: lib.rs  listener.rs  state.rs  watch.rs
crates/zrag-daemon/src/handlers/: cancel_index.rs  daemon_status.rs  doctor.rs  dsl_dep_tree.rs  dsl_file_tree.rs  dsl_project_map.rs  dsl_search_dep.rs  dsl_symbol_bodies.rs  dsl_symbol_body.rs  env.rs  handshake.rs  index.rs  mod.rs  remove_project.rs  search.rs  status.rs
crates/zrag-dsl/: Cargo.toml
crates/zrag-dsl/src/: batch.rs  chunking.rs  index.rs  lib.rs  model.rs  search_dep.rs
crates/zrag-dsl/src/render/: dsl.rs  mod.rs  tree.rs
crates/zrag-embed/: Cargo.toml
crates/zrag-embed/src/: any.rs  batch.rs  bert.rs  engine.rs  jina_bert.rs  lib.rs  model_registry.rs  normalize.rs  pooling.rs  tokenizer.rs
crates/zrag-hw/: Cargo.toml
crates/zrag-hw-core/: Cargo.toml
crates/zrag-hw-core/src/: lib.rs
crates/zrag-hw/src/: lib.rs
crates/zrag-ipc-client/: Cargo.toml
crates/zrag-ipc-client/src/: client.rs  lib.rs  spawn.rs
crates/zrag-pdf/: Cargo.toml
crates/zrag-pdf/src/: encoding.rs  extract.rs  heading.rs  mathrec.rs
crates/zrag-pdf/tests/: extract.rs  real_pdf.rs
crates/zrag-pipeline/: Cargo.toml
crates/zrag-pipeline/src/: fusion.rs  indexer.rs  lib.rs  manifest.rs  pdf_chunk.rs  progress.rs  search.rs
crates/zrag-pipeline/tests/: pdf_chunk.rs
crates/zrag-protocol/: Cargo.toml
crates/zrag-protocol/src/: lib.rs  render.rs  request.rs  response.rs
crates/zrag-protocol/tests/: pdf_render.rs
crates/zrag-recursive-chunk/: Cargo.toml
crates/zrag-recursive-chunk/src/: atom.rs  lib.rs  merge.rs  positions.rs
crates/zrag-remote-embed/: Cargo.toml
crates/zrag-remote-embed/src/: lib.rs  models.rs  provider.rs
crates/zrag-rerank/: Cargo.toml
crates/zrag-rerank/src/: gpu.rs  lib.rs
crates/zrag-rerank/tests/: score_parity.rs
crates/zrag-store/: Cargo.toml
crates/zrag-store/src/: chunks_table.rs  db.rs  delete_filter.rs  files_table.rs  lib.rs  schema.rs  upsert.rs
crates/zrag-tree-sitter/: Cargo.toml
crates/zrag-tree-sitter/src/: detect.rs  parse_args.rs  registry.rs
crates/zrag-ts-core/: Cargo.toml
crates/zrag-ts-core/src/: lib.rs  types.rs
crates/zrag-ts-dart/: Cargo.toml
crates/zrag-ts-dart/src/: lib.rs
crates/zrag-ts-go/: Cargo.toml
crates/zrag-ts-go/src/: lib.rs
crates/zrag-ts-javascript/: Cargo.toml
crates/zrag-ts-javascript/src/: lib.rs
crates/zrag-ts-ocaml/: Cargo.toml
crates/zrag-ts-ocaml/src/: lib.rs
crates/zrag-ts-python/: Cargo.toml
crates/zrag-ts-python/src/: lib.rs
crates/zrag-ts-rust/: Cargo.toml
crates/zrag-ts-rust/src/: lib.rs
crates/zrag-ts-solidity/: Cargo.toml
crates/zrag-ts-solidity/src/: lib.rs
crates/zrag-ts-typescript/: Cargo.toml
crates/zrag-ts-typescript/src/: lib.rs
crates/zti-ann/src/: selector.rs  usearch_graph.rs
crates/zti-common/: Cargo.toml
crates/zti-common/src/: lib.rs  paths.rs  secrets.rs
crates/zti-daemon/: Cargo.toml
crates/zti-daemon/src/: lib.rs  listener.rs  main.rs  state.rs  watch.rs
crates/zti-daemon/src/handlers/: cancel_index.rs  daemon_status.rs  doctor.rs  dsl_dep_tree.rs  dsl_file_tree.rs  dsl_project_map.rs  dsl_symbol_body.rs  env.rs  handshake.rs  index.rs  mod.rs  remove_project.rs  search.rs  status.rs
crates/zti-dsl/: Cargo.toml
crates/zti-dsl/src/: chunking.rs  index.rs  lib.rs  model.rs  search_dep.rs
crates/zti-dsl/src/render/: dsl.rs  mod.rs  tree.rs
crates/zti-embed/: Cargo.toml
crates/zti-embed/src/: any.rs  batch.rs  engine.rs  lib.rs  model_registry.rs  pooling.rs  tokenizer.rs
crates/zti-hw/: Cargo.toml
crates/zti-hw-core/: Cargo.toml
crates/zti-hw-core/src/: device.rs  lib.rs  probe.rs
crates/zti-hw-cpu/: Cargo.toml
crates/zti-hw-cpu/src/: lib.rs
crates/zti-hw-cuda/: Cargo.toml
crates/zti-hw-cuda/src/: lib.rs
crates/zti-hw-metal/: Cargo.toml
crates/zti-hw-metal/src/: lib.rs
crates/zti-hw-vulkan/: Cargo.toml
crates/zti-hw-vulkan/src/: lib.rs
crates/zti-hw/src/: lib.rs
crates/zti-ipc-client/: Cargo.toml
crates/zti-ipc-client/src/: client.rs  spawn.rs
crates/zti-pdf/: Cargo.toml
crates/zti-pdf/src/: encoding.rs  extract.rs  heading.rs  interpreter.rs  lib.rs  tokenizer.rs
crates/zti-pdf/tests/: extract.rs  real_pdf.rs
crates/zti-pipeline/: Cargo.toml
crates/zti-pipeline/src/: chat.rs  indexer.rs  lib.rs  manifest.rs  pdf_chunk.rs  progress.rs  search.rs
crates/zti-pipeline/tests/: pdf_chunk.rs
crates/zti-protocol/: Cargo.toml
crates/zti-protocol/src/: codec.rs  lib.rs  render.rs  request.rs  response.rs
crates/zti-protocol/tests/: pdf_render.rs
crates/zti-recursive-chunk/src/: lib.rs  merge.rs
crates/zti-remote-embed/src/: client.rs  (+4 more)
crates/zti-rerank/: Cargo.toml
crates/zti-rerank/src/: gpu.rs  lib.rs  turbo.rs
crates/zti-rerank/tests/: score_parity.rs
crates/zti-store/: Cargo.toml
crates/zti-store/src/: chunks_table.rs  db.rs  delete_filter.rs  files_table.rs  lib.rs  projects_table.rs  schema.rs  upsert.rs
crates/zti-tree-sitter/: Cargo.toml
crates/zti-tree-sitter/src/: detect.rs  lib.rs  parse_args.rs  registry.rs
crates/zti-ts-core/: Cargo.toml
crates/zti-ts-dart/: Cargo.toml
crates/zti-ts-ocaml/: Cargo.toml
crates/zti-ts-ocaml/src/: lib.rs
crates/zti-ts-rust/: Cargo.toml
crates/zti-ts-rust/src/: lib.rs
crates/zti-ts-solidity/: Cargo.toml
crates/zti-ts-typescript/: Cargo.toml
site/: package.json
(+57 files in other folders)
