[workspace]
resolver = "2"
members = [
  "crates/zti-common",
  "crates/zti-hw-core",
  "crates/zti-hw",
  "crates/zti-ts-core",
  "crates/zti-ts-rust",
  "crates/zti-ts-typescript",
  "crates/zti-ts-dart",
  "crates/zti-ts-solidity",
  "crates/zti-ts-python",
  "crates/zti-ts-javascript",
  "crates/zti-ts-go",
  "crates/zti-tree-sitter",
  "crates/zti-dsl",
  "crates/zti-embed",
  "crates/zti-rerank",
  "crates/zti-store",
  "crates/zti-pipeline",
  "crates/zti-protocol",
  "crates/zti-ann",
  "crates/zti-ipc-client",
  "crates/zti-daemon",
  "crates/zti-recursive-chunk",
  "crates/apps/zebraindex",
]

[workspace.package]
version      = "0.1.0"
edition      = "2024"
rust-version = "1.91"
license      = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow             = "1.0"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

tokio   = { version = "1", features = ["rt-multi-thread","macros","net","io-util","fs","sync","signal","process","time"] }
futures = "0.3"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
bincode    = { version = "2", features = ["derive", "serde"] }

blake3 = "1"
regex = "1"
ignore = "0.4"
walkdir = "2"
dirs   = "6"
fs2    = "0.4"
sysinfo = "0.38"

tree-sitter            = "0.26"
tree-sitter-rust       = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-dart       = "0.2"
tree-sitter-solidity   = "1"

candle-core        = { version = "0.10.2", default-features = false }
candle-nn          = { version = "0.10.2", default-features = false }
candle-transformers = { version = "0.10.2", default-features = false }
tokenizers  = { version = "0.23", default-features = false, features = ["fancy-regex"] }
hf-hub      = { version = "1.0.0-rc.1", default-features = false, features = ["blocking","rustls-tls"] }

bitpolar = { version = "0.3", features = ["parallel", "simd", "serde-support"] }

usearch = "2"

lancedb     = "0.30"
arrow       = "58"
arrow-array = "58"

clap      = { version = "4", features = ["derive", "env"] }
indicatif = "0.18"
rustyline = "18"

rmcp = { version = "1.7", features = ["server","macros","transport-io"] }
schemars = "1"
globset = "0.4"

indoc = "2"
toml    = "1"

ratatui   = "0.30"
crossterm = "0.29"

zti-common       = { path = "crates/zti-common" }
zti-hw-core      = { path = "crates/zti-hw-core" }
zti-hw           = { path = "crates/zti-hw" }
zti-ts-core      = { path = "crates/zti-ts-core" }
zti-ts-rust      = { path = "crates/zti-ts-rust" }
zti-ts-typescript = { path = "crates/zti-ts-typescript" }
zti-ts-dart      = { path = "crates/zti-ts-dart" }
zti-ts-solidity  = { path = "crates/zti-ts-solidity" }
zti-ts-python    = { path = "crates/zti-ts-python" }
zti-ts-javascript = { path = "crates/zti-ts-javascript" }
zti-ts-go        = { path = "crates/zti-ts-go" }
zti-tree-sitter  = { path = "crates/zti-tree-sitter" }
zti-dsl          = { path = "crates/zti-dsl" }
zti-embed        = { path = "crates/zti-embed" }
zti-rerank       = { path = "crates/zti-rerank" }
zti-store        = { path = "crates/zti-store" }
zti-pipeline     = { path = "crates/zti-pipeline" }
zti-protocol     = { path = "crates/zti-protocol" }
zti-ann           = { path = "crates/zti-ann" }
zti-ipc-client   = { path = "crates/zti-ipc-client" }
zti-daemon       = { path = "crates/zti-daemon" }
zti-recursive-chunk = { path = "crates/zti-recursive-chunk" }
