[workspace]
resolver = "2"
members = [
  "crates/zti-common",
  "crates/zti-hw-core",
  "crates/zti-hw",
  "crates/zti-ts-core",
  "crates/zti-ts-rust",
  "crates/zti-ts-typescript",
  "crates/zti-ts-dart",
  "crates/zti-ts-solidity",
  "crates/zti-ts-python",
  "crates/zti-ts-javascript",
  "crates/zti-ts-go",
  "crates/zti-ts-ocaml",
  "crates/zti-tree-sitter",
  "crates/zti-dsl",
  "crates/zti-remote-embed",
  "crates/zti-embed",
  "crates/zti-rerank",
  "crates/zti-store",
  "crates/zti-pipeline",
  "crates/zti-protocol",
  "crates/zti-ann",
  "crates/zti-ipc-client",
  "crates/zti-daemon",
  "crates/zti-recursive-chunk",
  "crates/apps/zebraindex",
  "benches",
]

[workspace.package]
version      = "0.1.0"
edition      = "2024"
rust-version = "1.91"
license      = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow             = "1.0"
tracing            = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
log                = { version = "0.4", features = ["release_max_level_info"] }

tokio   = { version = "1", features = ["rt-multi-thread","macros","net","io-util","fs","sync","signal","process","time"] }
futures = "0.3"
rayon   = "1"
rustc-hash = "2"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
bincode    = { version = "2", features = ["derive", "serde"] }
reqwest    = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json"] }

blake3 = "1"
mimalloc = "0.1"
regex = "1"
ignore = "0.4"
walkdir = "2"
dirs   = "6"
fs2    = "0.4"
sysinfo = "0.38"
keyring-core = "1.0.0"
apple-native-keyring-store = { version = "1.0.0", default-features = false, features = ["keychain"] }
dbus-secret-service-keyring-store = { version = "1.0.0", features = ["crypto-rust", "vendored"] }
windows-native-keyring-store = "1.1.0"

tree-sitter            = "0.26"
tree-sitter-rust       = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-dart       = "0.2"
tree-sitter-solidity   = "1"
tree-sitter-ocaml      = "0.25"

candle-core        = { version = "0.10.2", default-features = false }
candle-nn          = { version = "0.10.2", default-features = false }
candle-transformers = { version = "0.10.2", default-features = false }
tokenizers  = { version = "0.23", default-features = false, features = ["fancy-regex"] }
hf-hub      = { version = "0.4", default-features = false, features = ["ureq"] }
time        = "0.3"

bitpolar = { version = "0.3", features = ["parallel", "simd", "serde-support"] }

usearch = "2"

lancedb     = "0.30"
lance       = "7"
lance-io    = "7"
arrow       = "58"
arrow-array = "58"

clap      = { version = "4", features = ["derive", "env"] }
indicatif = "0.18"
rustyline = "18"

rmcp = { version = "1.7", features = ["server","macros","transport-io"] }
schemars = "1"
globset = "0.4"
notify                 = "8"
notify-debouncer-full  = "0.7"

indoc = "2"
toml    = "1"
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

ratatui   = "0.30"
crossterm = "0.29"

zti-common       = { path = "crates/zti-common" }
zti-hw-core      = { path = "crates/zti-hw-core" }
zti-hw           = { path = "crates/zti-hw" }
zti-ts-core      = { path = "crates/zti-ts-core" }
zti-ts-rust      = { path = "crates/zti-ts-rust" }
zti-ts-typescript = { path = "crates/zti-ts-typescript" }
zti-ts-dart      = { path = "crates/zti-ts-dart" }
zti-ts-solidity  = { path = "crates/zti-ts-solidity" }
zti-ts-python    = { path = "crates/zti-ts-python" }
zti-ts-javascript = { path = "crates/zti-ts-javascript" }
zti-ts-go        = { path = "crates/zti-ts-go" }
zti-ts-ocaml     = { path = "crates/zti-ts-ocaml" }
zti-tree-sitter  = { path = "crates/zti-tree-sitter" }
zti-dsl          = { path = "crates/zti-dsl" }
zti-remote-embed = { path = "crates/zti-remote-embed" }
zti-embed        = { path = "crates/zti-embed" }
zti-rerank       = { path = "crates/zti-rerank" }
zti-store        = { path = "crates/zti-store" }
zti-pipeline     = { path = "crates/zti-pipeline" }
zti-protocol     = { path = "crates/zti-protocol" }
zti-ann           = { path = "crates/zti-ann" }
zti-ipc-client   = { path = "crates/zti-ipc-client" }
zti-daemon       = { path = "crates/zti-daemon" }
zti-recursive-chunk = { path = "crates/zti-recursive-chunk" }
