[workspace]
resolver = "2"
members = [
  "crates/zrag-common",
  "crates/zrag-hw-core",
  "crates/zrag-hw",
  "crates/zrag-ts-core",
  "crates/zrag-ts-rust",
  "crates/zrag-ts-typescript",
  "crates/zrag-ts-dart",
  "crates/zrag-ts-solidity",
  "crates/zrag-ts-python",
  "crates/zrag-ts-javascript",
  "crates/zrag-ts-go",
  "crates/zrag-ts-ocaml",
  "crates/zrag-tree-sitter",
  "crates/zrag-dsl",
  "crates/zrag-remote-embed",
  "crates/zrag-embed",
  "crates/zrag-rerank",
  "crates/zrag-store",
  "crates/zrag-pipeline",
  "crates/zrag-protocol",
  "crates/zrag-ann",
  "crates/zrag-ipc-client",
  "crates/zrag-daemon",
  "crates/zrag-recursive-chunk",
  "crates/zrag-pdf",
  "crates/apps/zebrarag",
  "benches",
]

[workspace.package]
version      = "0.1.0"
edition      = "2024"
rust-version = "1.91"
license      = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow             = "1.0"
tracing            = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
log                = { version = "0.4", features = ["release_max_level_info"] }

tokio   = { version = "1", features = ["rt-multi-thread","macros","net","io-util","fs","sync","signal","process","time"] }
futures = "0.3"
rayon   = "1"
rustc-hash = "2"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
bincode    = { version = "2", features = ["derive", "serde"] }
reqwest    = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json"] }

blake3 = "1"
mimalloc = "0.1"
regex = "1"
ignore = "0.4"
walkdir = "2"
dirs   = "6"
fs2    = "0.4"
sysinfo = "0.38"
keyring-core = "1.0.0"
apple-native-keyring-store = { version = "1.0.0", default-features = false, features = ["keychain"] }
dbus-secret-service-keyring-store = { version = "1.0.0", features = ["crypto-rust", "vendored"] }
windows-native-keyring-store = "1.1.0"

tree-sitter            = "0.26"
tree-sitter-rust       = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-dart       = "0.2"
tree-sitter-solidity   = "1"
tree-sitter-ocaml      = "0.25"

candle-core        = { version = "0.10.2", default-features = false }
candle-nn          = { version = "0.10.2", default-features = false }
candle-transformers = { version = "0.10.2", default-features = false }
tokenizers  = { version = "0.23", default-features = false, features = ["fancy-regex"] }
hf-hub      = { version = "0.4", default-features = false, features = ["ureq"] }
time        = "0.3"

bitpolar = { version = "0.3", features = ["parallel", "simd", "serde-support"] }

usearch = "2"

lancedb     = "0.30"
lance       = "7"
lance-io    = "7"
arrow       = "58"
arrow-array = "58"

clap      = { version = "4", features = ["derive", "env"] }
indicatif = "0.18"
rustyline = "18"

rmcp = { version = "1.7", features = ["server","macros","transport-io"] }
schemars = "1"
globset = "0.4"
notify                 = "8"
notify-debouncer-full  = "0.7"

# PDF text extraction (Tier-1: Latin/WinAnsi/PDFDocEncoding + font-size headings).
# Kept default-feature-free to avoid pulling chrono/jiff/rayon/time.
lopdf = { version = "0.41", default-features = false }

indoc = "2"
toml    = "1"
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

ratatui   = "0.30"
crossterm = "0.29"

zrag-common       = { path = "crates/zrag-common" }
zrag-hw-core      = { path = "crates/zrag-hw-core" }
zrag-hw           = { path = "crates/zrag-hw" }
zrag-ts-core      = { path = "crates/zrag-ts-core" }
zrag-ts-rust      = { path = "crates/zrag-ts-rust" }
zrag-ts-typescript = { path = "crates/zrag-ts-typescript" }
zrag-ts-dart      = { path = "crates/zrag-ts-dart" }
zrag-ts-solidity  = { path = "crates/zrag-ts-solidity" }
zrag-ts-python    = { path = "crates/zrag-ts-python" }
zrag-ts-javascript = { path = "crates/zrag-ts-javascript" }
zrag-ts-go        = { path = "crates/zrag-ts-go" }
zrag-ts-ocaml     = { path = "crates/zrag-ts-ocaml" }
zrag-tree-sitter  = { path = "crates/zrag-tree-sitter" }
zrag-dsl          = { path = "crates/zrag-dsl" }
zrag-remote-embed = { path = "crates/zrag-remote-embed" }
zrag-embed        = { path = "crates/zrag-embed" }
zrag-rerank       = { path = "crates/zrag-rerank" }
zrag-store        = { path = "crates/zrag-store" }
zrag-pipeline     = { path = "crates/zrag-pipeline" }
zrag-protocol     = { path = "crates/zrag-protocol" }
zrag-ann           = { path = "crates/zrag-ann" }
zrag-ipc-client   = { path = "crates/zrag-ipc-client" }
zrag-daemon       = { path = "crates/zrag-daemon" }
zrag-recursive-chunk = { path = "crates/zrag-recursive-chunk" }
zrag-pdf          = { path = "crates/zrag-pdf" }

[profile.profiling]
inherits = "release"
debug = true
