[package]
name = "benches"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bench]]
name = "score_bench"
path = "score_bench.rs"
harness = false

[[bench]]
name = "embed_pool_bench"
path = "embed_pool_bench.rs"
harness = false

[[bench]]
name = "embed_inference_prof"
path = "embed_inference_prof.rs"
harness = false

[[bench]]
name = "index_prof"
path = "index_prof.rs"
harness = false

[dependencies]
zrag-rerank.workspace = true
zrag-embed.workspace = true
candle-core.workspace = true
anyhow.workspace = true
tokio.workspace = true
zrag-pipeline.workspace = true
zrag-store.workspace = true
zrag-common.workspace = true
zrag-protocol.workspace = true

[dev-dependencies]
criterion.workspace = true
