[package]
name = "zrag-ann"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
usearch.workspace = true
zrag-hw-core.workspace = true
tokio = { workspace = true, features = ["sync"] }
