[package]
name = "zrag-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "zrag_daemon"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
log.workspace = true
zrag-protocol.workspace = true
zrag-pipeline.workspace = true
zrag-store.workspace = true
zrag-embed.workspace = true
zrag-remote-embed.workspace = true
zrag-dsl.workspace = true
zrag-ts-core.workspace = true
zrag-tree-sitter.workspace = true
zrag-hw.workspace = true
zrag-hw-core.workspace = true
zrag-common.workspace = true
zrag-rerank.workspace = true
zrag-ann.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
fs2.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
