[package]
name = "zrag-ts-dart"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
tree-sitter-dart.workspace = true
zrag-ts-core.workspace = true

[dev-dependencies]
indoc.workspace = true
