[package]
name = "zti-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "zti-daemon"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zti-protocol.workspace = true
zti-pipeline.workspace = true
zti-store.workspace = true
zti-embed.workspace = true
zti-dsl.workspace = true
zti-ts-core.workspace = true
zti-tree-sitter.workspace = true
zti-hw.workspace = true
zti-hw-core.workspace = true
zti-common.workspace = true
zti-rerank.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
fs2.workspace = true
