[package]
name = "zti-embed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
ort.workspace = true
tokenizers.workspace = true
hf-hub.workspace = true
ndarray.workspace = true
zti-hw.workspace = true
zti-common.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true

[features]
clap = ["dep:clap"]

[dependencies.clap]
workspace = true
optional = true
