[package]
name = "zti-hw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["cpu"]
cpu     = ["dep:zti-hw-cpu"]
metal   = ["dep:zti-hw-metal"]
cuda    = ["dep:zti-hw-cuda"]
vulkan  = ["dep:zti-hw-vulkan"]

[dependencies]
anyhow.workspace = true
tracing.workspace = true
ort.workspace = true
zti-hw-core.workspace = true
zti-hw-cpu     = { workspace = true, optional = true }
zti-hw-metal   = { workspace = true, optional = true }
zti-hw-cuda    = { workspace = true, optional = true }
zti-hw-vulkan  = { workspace = true, optional = true }
