[package]
name = "zti-hw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
ort.workspace = true
zti-hw-core.workspace = true
zti-hw-cpu.workspace = true

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
zti-hw-metal.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
zti-hw-cuda.workspace = true
zti-hw-vulkan.workspace = true
