[package]
name = "zti-ipc-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
zti-protocol.workspace = true
zti-common.workspace = true
tokio = { workspace = true, features = ["net", "process", "time", "io-util"] }
