[package]
name = "zti-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
zti-dsl.workspace = true
zti-embed.workspace = true
zti-store.workspace = true
zti-tree-sitter.workspace = true
zti-rerank.workspace = true
zti-common.workspace = true
tokio.workspace = true
indicatif.workspace = true
rustyline.workspace = true
blake3.workspace = true
serde.workspace = true
ignore.workspace = true
