[package]
name = "zti-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
zti-dsl.workspace = true
zti-ts-core.workspace = true
zti-recursive-chunk.workspace = true
tree-sitter.workspace = true
zti-embed.workspace = true
zti-store.workspace = true
zti-tree-sitter.workspace = true
zti-rerank.workspace = true
zti-protocol.workspace = true
zti-common.workspace = true
zti-ann.workspace = true
zti-hw.workspace = true
tokio.workspace = true
indicatif.workspace = true
rustyline.workspace = true
blake3.workspace = true
toml.workspace = true
ignore.workspace = true
arrow.workspace = true
arrow-array.workspace = true
