[package]
name = "zti-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
bincode.workspace = true
tokio = { workspace = true, features = ["io-util"] }
