[package]
name = "zti-rerank"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
bitpolar.workspace = true
serde.workspace = true
rand = "0.10"
rand_chacha = "0.10"
rand_distr = "0.6"
candle-core.workspace = true
