[package]
name = "zti-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
lancedb.workspace = true
arrow.workspace = true
arrow-array.workspace = true
zti-common.workspace = true
serde.workspace = true
bincode.workspace = true
blake3.workspace = true
futures.workspace = true
